--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -26,10 +26,7 @@ command = /opt/homebrew/bin/fish
 # Behavior
 clipboard-read = allow
 clipboard-write = allow
-copy-on-select = true
-
-# Performance
-sync-to-monitor = true
+copy-on-select = false
 
 # Mouse
-mouse-hide-while-typing = true
+mouse-hide-while-typing = false
