--- a/git/.config/git/config
+++ b/git/.config/git/config
@@ -33,3 +33,5 @@
     br = branch
     ci = commit
     lg = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
+[push]
+	default = upstream
